--- a/SpeakerVisualizerExample/SpeakerVisualizerExample.vcxproj.filters
+++ b/SpeakerVisualizerExample/SpeakerVisualizerExample.vcxproj.filters
@@ -15,24 +15,24 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\SpeakerVisualizer.cpp">
+    <ClCompile Include="src\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="src\audio_recorder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\audio_displayer.cpp">
+    <ClCompile Include="src\visualizer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\audio_recorder.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\audio_sink.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\audio_displayer.h">
+    <ClInclude Include="src\audio_recorder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\visualizer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
